--- a/src/detail.html
+++ b/src/detail.html
@@ -1,25 +1,23 @@
 <template>
   <div class="container-fluid">
     <h1>Detail: ${title}</h1>
+    <span>${description}</span>
 
-    <div>
-      <label>Description</label>
-      <textarea value.bind="description" class="form-control"></textarea>
-    </div>
+    <div class="well">
+      <div class="form-group">
+        <label>Priority</label>
+        <input type="number" value.bind="priority" class="form-control">
+      </div>
 
-    <div>
-      <label>Priority</label>
-      <input type="number" value.bind="priority" class="form-control">
-    </div>
+      <div class="form-group">
+        <label>Created date</label>
+        <input type="date" value.bind="createdDate" class="form-control">
+      </div>
 
-    <div>
-      <label>Created date</label>
-      <input type="date" value.bind="createdDate" class="form-control">
-    </div>
-
-    <div>
-      <label>Updated date</label>
-      <input type="date" value.bind="updatedDate" class="form-control">
+      <div class="form-group">
+        <label>Updated date</label>
+        <input type="date" value.bind="updatedDate" class="form-control">
+      </div>
     </div>
   </div>
 </template>
